testcases/error/zero_width_number.veryl
module zero_width_number {
    const a: u32 = 0'd0;
}
